# LightyLauncherLib

./: Cargo.toml
src/: lib.rs
src/java/: distribution.rs  jre_downloader.rs  mod.rs  runtime.rs
src/minecraft/: mod.rs
src/minecraft/auth/: mod.rs
src/minecraft/version/: launch.rs  mod.rs  version.rs
src/minecraft/version/loaders/: fabric.rs  forge.rs  forge_legacy.rs  mod.rs  neoforge.rs  optifine.rs  quilt.rs  vanilla.rs
src/minecraft/version/loaders/utils/: assets.rs  client.rs  download.rs  librairies.rs  manifest.rs  mod.rs  natives.rs
src/utils/: download.rs  extract.rs  hosts.rs  macros.rs  mod.rs  system.rs
