[package]
name = "LightyLauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.0"

# Framework for serializing and deserializing data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18.1"

# OS
os_info = "3"
sysinfo = "0.29"

anyhow = "1.0.98"

# Generic
void = "1"
directories = "6.0.0"
once_cell = "1.16.0"
log = "0.4.27"
tracing = "0.1.41"
version-compare = "0.2.0"

# Async IO
tokio = { version = "1", features = ["full"] }


# HTTP library
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "charset", "gzip", "brotli", "zstd", "deflate", "json"] }

# FS libs
async_zip = { version = "0.0.11", features = ["full"] }
tokio-tar = "0.3.0"
async-compression = { version= "0.3.15", features = ["gzip"] }
sanitize-filename = "0.6.0"
path-absolutize = "3.0"
async-trait = "0.1.88"
sha1 = "0.11.0-pre.5"
hex = "0.4.3"
zip = "2.6.1"
dirs = "6.0.0"